[gd_scene load_steps=4 format=3 uid="uid://cyhn0d3khl7ac"]

[ext_resource type="Script" uid="uid://uuj23qd10u3n" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Texture2D" uid="uid://dlsxg4wen8itv" path="res://assets/Pause button placeholder.png" id="2_kukqi"]
[ext_resource type="Texture2D" uid="uid://b78q0gkvxjv3h" path="res://assets/Pause menuu (2).png" id="3_5d2l8"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_myx47")

[node name="PauseButton" type="TextureButton" parent="."]
anchors_preset = -1
anchor_right = 0.14500001
anchor_bottom = 0.186
offset_left = 46.0
offset_top = 24.0
offset_right = 938.95996
offset_bottom = 601.472
texture_normal = ExtResource("2_kukqi")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 1159.0
offset_bottom = 642.0

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 1157.0
offset_bottom = 635.0
texture = ExtResource("3_5d2l8")

[node name="ResumeButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 435.0
offset_top = 199.0
offset_right = 745.0
offset_bottom = 273.0

[node name="QuitButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 438.0
offset_top = 470.0
offset_right = 728.0
offset_bottom = 537.0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
